package net.catenax.irs.component;

public class GlobalAssetId {

   private String globalAssetId;
}
